# AgenticSystem

./: 2026-05-29-agent-core-implementation-plan.md  README.md
AgenticSystem-V1.0/agent-core/: pyproject.toml
AgenticSystem-V1.0/agent-core/app/agent/: loop.py  models.py
AgenticSystem-V1.0/agent-core/app/api/: agent.py  ws.py
AgenticSystem-V1.0/agent-core/app/context/: loaders.py  masker.py  merger.py
AgenticSystem-V1.0/agent-core/app/core/: config.py  database.py  embedding_client.py
AgenticSystem-V1.0/agent-core/app/mcp/: client.py  discovery.py  pool.py  retry.py
AgenticSystem-V1.0/agent-core/app/reload/: manager.py
AgenticSystem-V1.0/agent-core/app/skill/: engine.py  matcher.py  models.py  registry.py
AgenticSystem-V1.0/agent-core/app/workflow/: context.py  engine.py  models.py
AgenticSystem-V1.0/agent-core/config/: settings.test.yaml
AgenticSystem-V1.0/agent-core/docker/: docker-compose.yml
AgenticSystem-V1.0/agent-core/scripts/: init.sql
AgenticSystem-V1.0/agent-core/tests/: conftest.py
AgenticSystem-V1.0/agent-core/tests/unit/: test_agent_loop.py  test_api.py  test_cache.py  test_circuit_breaker.py  test_database.py  test_embedding_client.py  test_mcp_client.py  test_monitoring.py  test_skill_engine.py  test_skill_executor.py  test_skill_loader.py  test_smart_trimmer.py  test_state_store.py  test_workflow_models.py
agent-core/: README.md  requirements.txt
agent-core/app/: main.py
agent-core/config/: masking_rules.yaml  settings.yaml
agent-core/docs/: AgenticSystem-V2.0.md  agent-core-analysis-report.md  findings.md  progress.md  (+3 more)
(+45 files in other folders)
