[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-core"
version = "1.0.0"
description = "Production-grade Agent Core service with ReAct loop, Skill Engine, and Workflow orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "redis>=5.0.0",
    "asyncmy>=0.2.9",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "prometheus-client>=0.20.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
